[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "advent-of-code-2020"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.9.0"
misc_utils = "4.0.0"
rayon = "1.5.0"
